# remdit-rs

./: .gitignore  Cargo.toml  README.md  build.rs  config.example.toml
.github/workflows/: release.yml
src/: client.rs  config.rs  fileutil.rs  main.rs
