[package]
name = "remdit"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "remdit"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "fs",
    "signal",
    "sync",
] }
tokio-tungstenite = { version = "0.23", features = [
    "rustls-tls-webpki-roots",
    "connect",
], default-features = false }
tungstenite = { version = "0.23", default-features = false, features = [
    "rustls-tls-webpki-roots",
] }
pico-args = "0.5"
minreq = { version = "2.13", features = ["rustls"] }
futures-util = "0.3"
anyhow = "1.0"
url = "2.5"
home = "0.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false

[profile.release.package."*"]
opt-level = "z"

[profile.release.build-override]
opt-level = "z"

[features]
default = []
